Adicionado end point para cadastrar funcionário, recuperar senha e enviar email para validação do processo.
